# pompeii

./: Cargo.toml  README.md
assets/: Planes.glb
src/: cli.rs  main.rs  utils.rs
src/engine/: example_fluid.rs  example_ray_tracing.rs  example_triangle.rs  fxaa_pass.rs  mod.rs  utils.rs
src/engine/utils/: buffers.rs  cmd.rs  fxaa_pass.rs  mod.rs  ray_tracing.rs  swapchain.rs  textures.rs
src/shaders/: bb_triangle_frag.glsl  bb_triangle_vert.glsl  example_fluid.frag  example_fluid_advection.comp  example_fluid_curl.comp  example_fluid_divergence.comp  example_fluid_gradient_subtract.comp  example_fluid_pressure.comp  example_fluid_vorticity.comp  fullscreen_vert.glsl  fxaa_frag.glsl
src/shaders/example_fluid/: advection.comp  curl.comp  divergence.comp  gradient_subtract.comp  pressure.comp  shared.glsl  vorticity.comp
src/shaders/raytracing/: closest_hit.rchit  closest_hit_procedural.rchit  intersection_protophore.rint  intersection_sphere.rint  miss.rmiss  raygen.rgen  shadow.rmiss  shared.glsl  transparency.rahit
