[package]
name = "pompeii"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38"
ash-window = "0.13"
clap = { version = "4.5.7", features = ["derive"] }
gpu-allocator = "0.26"
inline-spirv = "0.2"
shaderc = "0.8"
smallvec = "1.13"
strum = { version = "0.26", features = ["derive"] }
winit = "0.30"
