[package]
name = "pompeii"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38"
ash-window = "0.13"
clap = { version = "4.5.7", features = ["derive"] }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", rev = "b61eb87fdb3feb26212bcfeb8804fb01155ee165" }
inline-spirv = "0.2"
shaderc = "0.8"
smallvec = "1.13"
strum = { version = "0.26", features = ["derive"] }
vk-mem = "0.4"
winit = "0.30"

[profile.release]
lto = true
