[package]
name = "pompeii"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
ash = "0.38"
ash-window = "0.13"
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
gltf = "1.4"
gpu-allocator = "0.27"
inline-spirv = "0.2"
itertools = "0.13"
nalgebra-glm = { version = "0.19", features = ["convert-bytemuck"] }
num-traits = "0.2"
smallvec = "1.13"
strum = { version = "0.26", features = ["derive"] }
winit = "0.30"

[profile.release]
lto = true
